# photon

./: .gitignore  .gitmodules  README.md  dub.json  meson.build
.github/workflows/: build.yml  examples.yml
bench/: curl-download.d  curl.d  read-file.d  write-file.d
bench/harness/: bench-local.sh  bench-remote.sh  http_load.d  meson.build  plot.py  rusage.d
bench/static_http/: hello.d  hello_threaded.d  hello_vibed.d  meson.build
bench/static_http/hello_go/: go.mod
bench/static_http/hello_go_fast/: go.mod
bench/static_http/hello_undertow/: pom.xml
bench/static_http/hello_undertow/src/main/java/me/olshansky/: HelloUndertow.java
docs/: index.html
examples/: channels.d  event.d  evently.d  io.d  offloaded.d  pool.d  run-all.sh  select.d  semaphore  semaphore.d  sleepy.d
src/: meson.build
src/photon/: exceptions.d  package.d  support.d  threadpool.d
src/photon/ds/: blocking_queue.d  common.d  intrusive_queue.d  ring_queue.d
src/photon/freebsd/: core.d  support.d  syscalls.d
src/photon/linux/: core.d  support.d  syscalls.d
src/photon/macos/: core.d  support.d  syscalls.d
src/photon/windows/: core.d  support.d
src/utils/: http_server.d
tests/: await.d  curl_download.d  echo_client.d  echo_server.d  go_same_thread.d  meson.build  ping_pong_fiber_half_duplex.d  ping_pong_full_duplex.d  ping_pong_full_duplex_n.d  ping_pong_thread_half_duplex.d  poll_timer.d  zmq.d
